# solana-vault-standard

./: Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  package.json
.claude/skills/: SKILL.md
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  PRIVACY.md  SDK.md  SECURITY.md  SVS-1.md  SVS-2.md  SVS-3.md  SVS-4.md  TESTING.md  specs-SVS05.md  specs-SVS06.md  specs-SVS07.md  specs-SVS08.md  specs-SVS09.md  specs-SVS10.md  specs-SVS11.md  specs-SVS12.md
modules/svs-access/: Cargo.toml
modules/svs-caps/: Cargo.toml
modules/svs-fees/: Cargo.toml
modules/svs-locks/: Cargo.toml
modules/svs-math/: Cargo.toml
modules/svs-math/src/: convert.rs  error.rs  lib.rs  mul_div.rs  rounding.rs
modules/svs-oracle/: Cargo.toml
modules/svs-rewards/: Cargo.toml
programs/svs-1/: Cargo.toml
programs/svs-2/: Cargo.toml
programs/svs-3/: Cargo.toml
programs/svs-3/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/svs-3/src/instructions/: admin.rs  apply_pending.rs  deposit.rs  initialize.rs  mint.rs  mod.rs  redeem.rs  view.rs  withdraw.rs
programs/svs-4/: Cargo.toml
proofs-backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: test-modules.sh
sdk/core/: README.md  package.json
sdk/privacy/: README.md  package.json
tests/: admin-extended.ts  decimals.ts  edge-cases.ts  full-lifecycle.ts  invariants.ts  modules.ts  multi-user.ts  svs-1.ts  svs-2.ts  svs-3.ts  yield-sync.ts
trident-tests/: FUZZ_ISSUES.md
trident-tests/fuzz_0/: test_fuzz.rs  types.rs
(+134 files in other folders)
