[package]
name = "svs-math"
version = "0.1.0"
edition = "2021"
description = "Shared math utilities for SVS vault programs"
license = "Apache-2.0"

[dependencies]
# No anchor-lang dependency - pure Rust math for maximum reusability

[features]
default = []

[dev-dependencies]
# For property-based testing
proptest = "1.4"
